--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/ujjwalkajal02">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/ujjwalkajal02">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <a class="footer-link" href="https://ujjwal0204.github.io/portfolio/">Website</a>
         <p id="copyright">© 2023 Ujjwal </p>
     </div>
 
